--- a/src/client/containers/App.css
+++ b/src/client/containers/App.css
@@ -2,8 +2,13 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial;
-  font-size: 12px;
+  font-size: 13px;
   line-height: 1.2em;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+  margin-top: 0;
+  margin-bottom: 20px;
 }
 
 #container {
