--- a/src/client/components/App/AppHeader.css
+++ b/src/client/components/App/AppHeader.css
@@ -5,21 +5,24 @@
     color: white;
     width: 100%;
     display: flex;
+    justify-content: space-between;
     align-items: center;
     top: 0;
     left: 0;
-    #logo {
-      font-weight: bold;
-      font-size: 18px;
-      padding: 15px;
-    }
     #nav {
-      font-size: 14px;
-      margin-left: 10px;
+      padding: 15px;
+      display: flex;
+      align-items: center;
+      >#logo {
+        font-weight: bold;
+        font-size: 18px;
+      }
       >ul {
         list-style-type: none;
         padding: 0;
         margin: 0;
+        font-size: 14px;
+        margin-left: 10px;
         li {
           display: inline-block;
           a {
@@ -29,6 +32,13 @@
             color: white;
           }
         }
+      }
+    }
+    #login {
+      padding: 15px;
+      a {
+        color: white;
+        text-decoration: none;
       }
     }
   }
