--- a/src/client/components/shared/Button.css
+++ b/src/client/components/shared/Button.css
@@ -2,13 +2,16 @@
   border-radius: 5px;
   padding: 7px;
   background-color: white;
+  min-width: 70px;
+  font-size: 14px;
+  cursor: pointer;
   &.button-default {
-    border: solid 1px blue;
+    border: solid 1px #3897f0;
     color: blue;
   }
   &.button-primary {
-    border: solid 1px blue;
-    background-color: blue;
+    border: solid 1px #3897f0;
+    background-color: #3897f0;
     color: white;
   }
 }
