--- a/src/client/containers/App.css
+++ b/src/client/containers/App.css
@@ -2,8 +2,9 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial;
-  font-size: 13px;
+  font-size: 14px;
   line-height: 1.2em;
+  box-sizing: border-box;
 }
 
 h1, h2, h3, h4, h5, h6, p {
